fix it translation files.

--- a/it-IT/site/it-IT.plg_system_eventgallerycapabilitiesreport.sys.ini
+++ b/it-IT/site/it-IT.plg_system_eventgallerycapabilitiesreport.sys.ini
@@ -1,2 +1,2 @@
-PLG_SYSTEM_EVENTGALLERY_CAPABILITIES_REPORT="Event Gallery - Raporto Capacità"
-PLG_SYSTEM_EVENTGALLERY_CAPABILITIES_REPORT_XML_DESCRIPTION="Mostra le capacità di Event Gallery nel rapporto capacità di Joomla!."
+PLG_SYSTEM_EVENTGALLERY_CAPABILITIES_REPORT="Event Gallery - Raporto Capacit&agrave;"
+PLG_SYSTEM_EVENTGALLERY_CAPABILITIES_REPORT_XML_DESCRIPTION="Mostra le capacit&agrave; di Event Gallery nel rapporto capacit&agrave; di Joomla!."
