fixes encoding of the localization file.

--- a/it-IT/site/it-IT.com_eventgallery.ini
+++ b/it-IT/site/it-IT.com_eventgallery.ini
@@ -14,8 +14,8 @@ COM_EVENTGALLERY_CART_ITEMS_TOGGLE_UP="Trattieni articoli vecchi"
 COM_EVENTGALLERY_CART_ITEM_ADD2CART="Aggiungi articoli al carrello"
 COM_EVENTGALLERY_CART_ITEM_ADD2CART_DESCRIPTION="Aggiungi immagine corrente con il formato scelto al carrello."
 COM_EVENTGALLERY_CART_ITEM_REMOVE="Rimuovi articolo dal carrello"
-COM_EVENTGALLERY_CART_EMPTY="Il carrello Ë attualmente vuoto."
-COM_EVENTGALLERY_CART_DISABLED="Il carello Ë disattivato per questo sito."
+COM_EVENTGALLERY_CART_EMPTY="Il carrello √® attualmente vuoto."
+COM_EVENTGALLERY_CART_DISABLED="Il carello √® disattivato per questo sito."
 COM_EVENTGALLERY_CART_CONNECTOR="Apri il dettagli articlo per questa immagine."
 COM_EVENTGALLERY_CART_RECALCULATE="Ricalcola il carello per aggiornare il totale."
 
@@ -80,9 +80,9 @@ COM_EVENTGALLERY_CHECKOUT_BILLINGFORM_ADDRESS3_LABEL="Indirizzo 3"
 COM_EVENTGALLERY_CHECKOUT_BILLINGFORM_ADDRESS3_DESCRIPTION=""
 COM_EVENTGALLERY_CHECKOUT_BILLINGFORM_ADDRESS3_PLACEHOLDER=""
 
-COM_EVENTGALLERY_CHECKOUT_BILLINGFORM_CITY_LABEL="Citt‡"
-COM_EVENTGALLERY_CHECKOUT_BILLINGFORM_CITY_DESCRIPTION="Citt‡"
-COM_EVENTGALLERY_CHECKOUT_BILLINGFORM_CITY_PLACEHOLDER="Citt‡"
+COM_EVENTGALLERY_CHECKOUT_BILLINGFORM_CITY_LABEL="Citt√†"
+COM_EVENTGALLERY_CHECKOUT_BILLINGFORM_CITY_DESCRIPTION="Citt√†"
+COM_EVENTGALLERY_CHECKOUT_BILLINGFORM_CITY_PLACEHOLDER="Citt√†"
 
 COM_EVENTGALLERY_CHECKOUT_BILLINGFORM_ZIP_LABEL="CAP"
 COM_EVENTGALLERY_CHECKOUT_BILLINGFORM_ZIP_DESCRIPTION="CAP"
@@ -119,9 +119,9 @@ COM_EVENTGALLERY_CHECKOUT_SHIPPINGFORM_ADDRESS3_LABEL="Indirizzo 3"
 COM_EVENTGALLERY_CHECKOUT_SHIPPINGFORM_ADDRESS3_DESCRIPTION=""
 COM_EVENTGALLERY_CHECKOUT_SHIPPINGFORM_ADDRESS3_PLACEHOLDER=""
 
-COM_EVENTGALLERY_CHECKOUT_SHIPPINGFORM_CITY_LABEL="Citt‡"
-COM_EVENTGALLERY_CHECKOUT_SHIPPINGFORM_CITY_DESCRIPTION="Citt‡"
-COM_EVENTGALLERY_CHECKOUT_SHIPPINGFORM_CITY_PLACEHOLDER="Citt‡"
+COM_EVENTGALLERY_CHECKOUT_SHIPPINGFORM_CITY_LABEL="Citt√†"
+COM_EVENTGALLERY_CHECKOUT_SHIPPINGFORM_CITY_DESCRIPTION="Citt√†"
+COM_EVENTGALLERY_CHECKOUT_SHIPPINGFORM_CITY_PLACEHOLDER="Citt√†"
 
 COM_EVENTGALLERY_CHECKOUT_SHIPPINGFORM_ZIP_LABEL="CAP"
 COM_EVENTGALLERY_CHECKOUT_SHIPPINGFORM_ZIP_DESCRIPTION="CAP"
@@ -174,7 +174,7 @@ COM_EVENTGALLERY_CART_CHECKOUT_REVIEW_TAC="Termini e condizioni"
 COM_EVENTGALLERY_CART_CHECKOUT_REVIEW_IMPRESS="Impressione"
 
 COM_EVENTGALLERY_CART_CHECKOUT_CONFIRM_HEADLINE="Grazie per  il tuo ordine"
-COM_EVENTGALLERY_CART_CHECKOUT_CONFIRM_SUCCESS_MESSAGE="I tuo ordine con il numero %s Ë stato registrato. Abbiamo inviato una mail a %s"
+COM_EVENTGALLERY_CART_CHECKOUT_CONFIRM_SUCCESS_MESSAGE="I tuo ordine con il numero %s √® stato registrato. Abbiamo inviato una mail a %s"
 
 
 COM_EVENTGALLERY_LINEITEM_PRICE="Prezzo"
@@ -182,12 +182,12 @@ COM_EVENTGALLERY_LINEITEM_PRICE_INCLUDED="incluso nel pacchetto"
 COM_EVENTGALLERY_LINEITEM_FLATPRICE_WITH_PLACEHOLDER="Prezzo massimo: %s"
 COM_EVENTGALLERY_LINEITEM_SINGLEPRICE="Prezzo per articolo"
 COM_EVENTGALLERY_LINEITEM_IMAGETYPE="Formato"
-COM_EVENTGALLERY_LINEITEM_QUANTITY="Quantit‡"
+COM_EVENTGALLERY_LINEITEM_QUANTITY="Quantit√†"
 COM_EVENTGALLERY_LINEITEM_DELETE="Rimuovi"
 COM_EVENTGALLERY_LINEITEM_OPEN_EVENT="Apri evento"
 COM_EVENTGALLERY_LINEITEM_PRICE_PER_ITEM_DROPDOWM="%s (%s)"
 COM_EVENTGALLERY_LINEITEM_PRICE_PER_ITEM_WITH_PLACEHOLDER="Prezzo singolo: %s"
-COM_EVENTGALLERY_LINEITEM_PRICE_SCALEPRICEINFORMATION_LABEL="Il prezzo dipende dalla quantit‡."
+COM_EVENTGALLERY_LINEITEM_PRICE_SCALEPRICEINFORMATION_LABEL="Il prezzo dipende dalla quantit√†."
 COM_EVENTGALLERY_LINEITEM_PRICE_SCALEPRICEINFORMATION_LINK="Mostra elenco prezzi."
 COM_EVENTGALLERY_LINEITEM_CLONE="Copia"
 COM_EVENTGALLERY_LINEITEM_ADD_COMMENT="Commento"
@@ -217,8 +217,8 @@ COM_EVENTGALLERY_EVENT_AJAX_IMAGE_CAPTION_IMAGE="Immagine"
 COM_EVENTGALLERY_EVENT_AJAX_IMAGE_CAPTION_OF="di"
 
 COM_EVENTGALLERY_EVENT_DEFAULT_IMAGE_VIEWS="Viste"
-COM_EVENTGALLERY_EVENT_NO_PUBLISHED_MESSAGE="L&grave;evento a cui desideri accedere non Ë pubblicato"
-COM_EVENTGALLERY_EVENT_SHARING_NOT_ACTIVE="Questo evento non puÚ essese condiviso"
+COM_EVENTGALLERY_EVENT_NO_PUBLISHED_MESSAGE="L&grave;evento a cui desideri accedere non √® pubblicato"
+COM_EVENTGALLERY_EVENT_SHARING_NOT_ACTIVE="Questo evento non pu√≤ essese condiviso"
 COM_EVENTGALLERY_EVENT_CACHEFILE_NOT_FOUND="Error: impossibile leggere la cache. Verificare i permessi alla cartella."
 COM_EVENTGALLERY_EVENT_FILE_NOT_FOUND="File non trovato."
 COM_EVENTGALLERY_EVENT_FILEEXTENSION_NOT_SUPPORTED="Tipo di file non supportato."
@@ -234,23 +234,23 @@ COM_EVENTGALLERY_SINGLEIMAGE_NAV_NEXT="vai alla prossima immagine"
 COM_EVENTGALLERY_SINGLEIMAGE_NAV_END="vai all&grave;ultima immagine"
 COM_EVENTGALLERY_SINGLEIMAGE_NAV_ZOOM="click per ingrandire l&grave;immagine"
 COM_EVENTGALLERY_SINGLEIMAGE_HITS="Numero viste:"
-COM_EVENTGALLERY_SINGLEIMAGE_NO_PUBLISHED_MESSAGE="L&grave;immagie non Ë al momento disponible"
+COM_EVENTGALLERY_SINGLEIMAGE_NO_PUBLISHED_MESSAGE="L&grave;immagie non √® al momento disponible"
 
 COM_EVENTGALLERY_SINGLEIMAGE_MINIPAGE_OPEN_EVENT="Apri evento"
 
 COM_EVENTGALLERY_PASSWORD_ENTER_PASSWORD="Per accedere all&grave;evento \"%s\" devi fornire una password."
 COM_EVENTGALLERY_PASSWORD_PASSWORDHINT="Suggerimento Password:"
-COM_EVENTGALLERY_PASSWORD_FORM_ERROR="La password indicata non Ë corretta."
+COM_EVENTGALLERY_PASSWORD_FORM_ERROR="La password indicata non √® corretta."
 COM_EVENTGALLERY_PASSWORD_FORM_PASSWORD_LABEL="Password"
 COM_EVENTGALLERY_PASSWORD_FORM_PASSWORD_DESC="Inserisci una password"
 COM_EVENTGALLERY_PASSWORD_FORM_SUBMIT="Sottometi"
 
 COM_EVENTGALLERY_SOCIAL_SHARE="Condividi"
-COM_EVENTGALLERY_SOCIAL_SHARE_IMAGE_SHARED="L&grave;immagine Ë stata condivisa correttamente."
+COM_EVENTGALLERY_SOCIAL_SHARE_IMAGE_SHARED="L&grave;immagine √® stata condivisa correttamente."
 
-COM_EVENTGALLERY_PRODUCT_VAT_HINT="IVA inclusa, pi˘ i costi di spedizione"
-COM_EVENTGALLERY_IMAGESET_PRICES="Indica il formato preferito e la quantit‡ per l&grave;immagine."
-COM_EVENTGALLERY_PRODUCT_BUY_IMAGES_HELP="Usa i <i class=\"egfa egfa-cart-plus\"></i> bottoni a lato di ogni immagine per aggiungerla al carrello. Le immagini che sono gi‡ nel carrello sono sengate con  <i class=\"egfa egfa-shopping-cart\"></i> icona."
+COM_EVENTGALLERY_PRODUCT_VAT_HINT="IVA inclusa, pi√π i costi di spedizione"
+COM_EVENTGALLERY_IMAGESET_PRICES="Indica il formato preferito e la quantit√† per l&grave;immagine."
+COM_EVENTGALLERY_PRODUCT_BUY_IMAGES_HELP="Usa i <i class=\"egfa egfa-cart-plus\"></i> bottoni a lato di ogni immagine per aggiungerla al carrello. Le immagini che sono gi√† nel carrello sono sengate con  <i class=\"egfa egfa-shopping-cart\"></i> icona."
 COM_EVENTGALLERY_PRODUCT_BUY_IMAGES_HIDE_BUTTONS="Nascondi i bottoni di acquisto"
 COM_EVENTGALLERY_PRODUCT_BUY_IMAGES_HIDE_BUTTONS_DESCRIPTION="Nasconde i bottoni usati per acquistare le immagini."
 COM_EVENTGALLERY_PRODUCT_BUY_IMAGES_SHOW_BUTTONS="Acquista immagini"
@@ -291,7 +291,7 @@ COM_EVENTGALLERY_TRACKORDER_FORM_REGISTERED_LABEL="Collegati"
 COM_EVENTGALLERY_TRACKORDER_FORM_REGISTERED_DESC="Collegati per avere un elenco dei tuoi ordini."
 COM_EVENTGALLERY_TRACKORDER_FORM_SIGNIN="Collegati"
 COM_EVENTGALLERY_TRACKORDER_VIEWORDER_LABEL="Vedi Ordini"
-COM_EVENTGALLERY_TRACKORDER_VIEWORDER_DESC="Sei gi‡ connesso. Vedi i tuoi ordini usando il bottone qui sotto."
+COM_EVENTGALLERY_TRACKORDER_VIEWORDER_DESC="Sei gi√† connesso. Vedi i tuoi ordini usando il bottone qui sotto."
 COM_EVENTGALLERY_TRACKORDER_NOTFOUND="Nessun ordine per i dati forniti."
 COM_USERS_LOGIN_USERNAME_LABEL="Nome Utente"
 COM_USERS_LOGIN_REGISTER="Crea Account"
@@ -307,7 +307,7 @@ COM_EVENTGALLERY_ORDER_ID="Numero ordine"
 
 COM_EVENTGALLERY_IMAGE_ID="ID Immagine: "
 
-COM_EVENTGALLERY_FILE_NOT_DOWNLOADABLE_MESSAGE="Questo file non Ë scaricabile."
+COM_EVENTGALLERY_FILE_NOT_DOWNLOADABLE_MESSAGE="Questo file non √® scaricabile."
 
 COM_EVENTGALLERY_LIGHTBOX_CLOSE="Chiudi (Esc)"
 COM_EVENTGALLERY_LIGHTBOX_SHARE="Condividi"
@@ -323,16 +323,16 @@ COM_EVENTGALLERY_LIGHTBOX_PLAYSLIDESHOW="Avvia lo show"
 COM_EVENTGALLERY_IMAGETYPE_FREEQUANTITY_LABEL="Prime %d immagini sono gratis."
 COM_EVENTGALLERY_IMAGETYPE_SCALEPRICE_PRICE="Prezzo"
 COM_EVENTGALLERY_IMAGETYPE_SCALEPRICE_PACKAGEPRICE="Prezzo del pacchetto"
-COM_EVENTGALLERY_IMAGETYPE_SCALEPRICE_QUANTITY="Quantit‡"
+COM_EVENTGALLERY_IMAGETYPE_SCALEPRICE_QUANTITY="Quantit√†"
 COM_EVENTGALLERY_IMAGETYPE_SCALEPRICE_QUANTITY_PACKAGE="Dimensine pacco"
-COM_EVENTGALLERY_IMAGETYPE_SCALEPRICE_PACKAGE_IMAGETYPE="Quantit‡ Ë la somma delle righe con lo stesso formato. Il numero necessario di imballi deriva da questo."
-COM_EVENTGALLERY_IMAGETYPE_SCALEPRICE_PACKAGE_LINEITEM="Quantit‡ per riga di oggetto. Il numero necessario di imballi deriva da questo."
-COM_EVENTGALLERY_IMAGETYPE_SCALEPRICE_SINGLEPACKAGE_IMAGETYPE="Acquista le immagini come pacchetto. Il prezzo di una singola immagine Ë applicato per articoli fuori formato."
-COM_EVENTGALLERY_IMAGETYPE_SCALEPRICE_SINGLEPACKAGE_LINEITEM="Quntit‡ per riga di articoli. Una imballo Ë applicato per ogni articolo."
-COM_EVENTGALLERY_IMAGETYPE_SCALEPRICE_DISCOUNT_IMAGETYPE="Quantit‡ Ë la somma di tutte le linee con lo stesso formato."
-COM_EVENTGALLERY_IMAGETYPE_SCALEPRICE_DISCOUNT_LINEITEM="Quantit‡ per riga di articoli."
+COM_EVENTGALLERY_IMAGETYPE_SCALEPRICE_PACKAGE_IMAGETYPE="Quantit√† √® la somma delle righe con lo stesso formato. Il numero necessario di imballi deriva da questo."
+COM_EVENTGALLERY_IMAGETYPE_SCALEPRICE_PACKAGE_LINEITEM="Quantit√† per riga di oggetto. Il numero necessario di imballi deriva da questo."
+COM_EVENTGALLERY_IMAGETYPE_SCALEPRICE_SINGLEPACKAGE_IMAGETYPE="Acquista le immagini come pacchetto. Il prezzo di una singola immagine √® applicato per articoli fuori formato."
+COM_EVENTGALLERY_IMAGETYPE_SCALEPRICE_SINGLEPACKAGE_LINEITEM="Quntit√† per riga di articoli. Una imballo √® applicato per ogni articolo."
+COM_EVENTGALLERY_IMAGETYPE_SCALEPRICE_DISCOUNT_IMAGETYPE="Quantit√† √® la somma di tutte le linee con lo stesso formato."
+COM_EVENTGALLERY_IMAGETYPE_SCALEPRICE_DISCOUNT_LINEITEM="Quantit√† per riga di articoli."
 
-COM_EVENTGALLERY_PAYMENT_VERIFICATION_FAILED="Il metodo di pagamento selezionato Ë invalido. Controlla i dati di pagamento."
+COM_EVENTGALLERY_PAYMENT_VERIFICATION_FAILED="Il metodo di pagamento selezionato √® invalido. Controlla i dati di pagamento."
 
 COM_EVENTGALLERY_GOOGLEPHOTOSACCOUNT_FOR_EVENT_INVALID="Nessuna o invalide credenziali per l&grave;album: %s"
 
@@ -347,7 +347,7 @@ COM_EVENTGALLERY_MESSAGES_EMAIL_LABEL="EMail"
 COM_EVENTGALLERY_MESSAGES_EMAIL_DESCRIPTION="Come possiamo contattarti ? informazione opzionale."
 COM_EVENTGALLERY_MESSAGES_EMAIL_PLACEHOLDER="Email (opzionale)"
 COM_EVENTGALLERY_MESSAGES_MESSAGE_LABEL="Messaggio"
-COM_EVENTGALLERY_MESSAGES_MESSAGE_DESCRIPTION="Facci sapere perchÈ segnali questa immagine."
+COM_EVENTGALLERY_MESSAGES_MESSAGE_DESCRIPTION="Facci sapere perch√© segnali questa immagine."
 COM_EVENTGALLERY_MESSAGES_ACCEPT_DATA_PRIVACY_LABEL="Accetto la politica di data privacy"
 COM_EVENTGALLERY_MESSAGES_ACCEPT_DATA_PRIVACY_DESC="Dobbiamo salvare i tuoi dati per poter rispondere in seguito."
 COM_EVENTGALLERY_MESSAGES_CAPTCHA_LABEL="Captcha"
