converted ISO to UTF8

--- a/it-IT/admin/it-IT.com_eventgallery.ini
+++ b/it-IT/admin/it-IT.com_eventgallery.ini
@@ -650,7 +650,7 @@ COM_EVENTGALLERY_METHOD_TAXRATE_DESCRIPTION="La percentuale delle tasse  (0-100)
 COM_EVENTGALLERY_METHOD_PRICE="Prezzo"
 COM_EVENTGALLERY_METHOD_PRICE_DESCRIPTION="Il prezzo di questo elemento."
 COM_EVENTGALLERY_METHOD_PRICE_PERCENTAGED="Prezzo percentuale"
-COM_EVENTGALLERY_METHOD_PRICE_PERCENTAGED_DESCRIPTION="Il prezzo di questo elemento basato sul totale parziale del carrello in percentuale. Se il parziale &egrave; 20€ ed il valore del campo &egrave; 25€, il costo finale di questo metodo &egrave; 5€. Puoi usare questo in combinazione col prezzo fisso."
+COM_EVENTGALLERY_METHOD_PRICE_PERCENTAGED_DESCRIPTION="Il prezzo di questo elemento basato sul totale parziale del carrello in percentuale. Se il parziale &egrave; 20€ ed il valore del campo &egrave; 25â‚¬, il costo finale di questo metodo &egrave; 5â‚¬. Puoi usare questo in combinazione col prezzo fisso."
 COM_EVENTGALLERY_METHOD_CURRENCY="Valuta"
 COM_EVENTGALLERY_METHOD_CURRENCY_DESCRIPTION="La valuta del prezzo"
 COM_EVENTGALLERY_METHOD_RULE="regola"
