--- a/it-IT/admin/it-IT.com_eventgallery.sys.ini
+++ b/it-IT/admin/it-IT.com_eventgallery.sys.ini
@@ -26,7 +26,7 @@ COM_EVENTGALLERY_OPTIONS_EVENTS="Eventi"
 COM_EVENTGALLERY_OPTIONS_CATEGORY="Categorie"
 COM_EVENTGALLERY_OPTIONS_LAYOUT_EVENTS_LIST="Lista - Eventi"
 COM_EVENTGALLERY_OPTIONS_LAYOUT_EVENTS_LIST_DESC="Configura la lista eventi."
-COM_EVENTGALLERY_OPTIONS_LAYOUT_EVENTS_LIST_MESSAGE="Quest è la vista classica con miniature ed altro."
+COM_EVENTGALLERY_OPTIONS_LAYOUT_EVENTS_LIST_MESSAGE="Quest Ã¨ la vista classica con miniature ed altro."
 
 COM_EVENTGALLERY_OPTIONS_LAYOUT_CATEGORIES="Lista - Categorie"
 COM_EVENTGALLERY_OPTIONS_LAYOUT_CATEGORIES_DESC="Gerarchia Categorie."
@@ -55,9 +55,9 @@ COM_EVENTGALLERY_LAYOUT_EVENT_IMAGE_LIST_MESSAGE="Mostra le immagini come una li
 COM_EVENTGALLERY_LAYOUT_EVENT_AJAX_LIST="Evento - Lista Ajax"
 COM_EVENTGALLERY_LAYOUT_EVENT_AJAX_LIST_DESC="Configura la lista ajax."
 COM_EVENTGALLERY_LAYOUT_EVENT_AJAX_LIST_MESSAGE="Mostra una area paginata con miniature con una immagine larga"
-COM_EVENTGALLERY_LAYOUT_EVENT_SIMPLE_LIST_MESSAGE="Mostra miniature in griglia dove ognuna non è tagliata e centrata nel suo spazio."
+COM_EVENTGALLERY_LAYOUT_EVENT_SIMPLE_LIST_MESSAGE="Mostra miniature in griglia dove ognuna non Ã¨ tagliata e centrata nel suo spazio."
 COM_EVENTGALLERY_LAYOUT_EVENT_SIMPLE_LIST="Evento - Lista Griglia"
-COM_EVENTGALLERY_LAYOUT_EVENT_TILES_MESSAGE="Mostra miniatura in piastrelle dove ognuna non è tagliata e visualizzata con informazioni aggiuntive."
+COM_EVENTGALLERY_LAYOUT_EVENT_TILES_MESSAGE="Mostra miniatura in piastrelle dove ognuna non Ã¨ tagliata e visualizzata con informazioni aggiuntive."
 COM_EVENTGALLERY_LAYOUT_EVENT_TILES="Evento - Lista Piastrelle"
 COM_EVENTGALLERY_LAYOUT_EVENT_SQUARE_MESSAGE="Mostra antepriome quadrare."
 COM_EVENTGALLERY_LAYOUT_EVENT_SQUARE="Evento - Quadrati"
