--- a/it-IT/site/it-IT.mod_eventgallery_categories.ini
+++ b/it-IT/site/it-IT.mod_eventgallery_categories.ini
@@ -8,7 +8,7 @@ COM_MODULES_FIELD_MODULECLASS_DESC="Indica classi addizionali CSS per il contenu
 MOD_EVENTGALLERY_CATEGORIES_FIELD_COUNT_DESC="Indica il numero del primo livello di sottocategoria da mostrare. Se non indicato sar&agrave; tutti"
 MOD_EVENTGALLERY_CATEGORIES_FIELD_COUNT_LABEL="# prima Sottocategoria"
 MOD_EVENTGALLERY_CATEGORIES_FIELD_MAXLEVEL_DESC="Seleziona il massimo livello di profondit&agrave; di ogni sottocategoria. Se non indicato sar&agrave; tutto"
-MOD_EVENTGALLERY_CATEGORIES_FIELD_MAXLEVEL_LABEL="Massimo livello di profondit‡"
+MOD_EVENTGALLERY_CATEGORIES_FIELD_MAXLEVEL_LABEL="Massimo livello di profondit√†"
 MOD_EVENTGALLERY_CATEGORIES_FIELD_PARENT_DESC="Scegli una categoria principale"
 MOD_EVENTGALLERY_CATEGORIES_FIELD_PARENT_LABEL="Categoria Principale"
 MOD_EVENTGALLERY_CATEGORIES_FIELD_SHOW_CHILDREN_DESC="Mostra o Nascondi le sottocategorie"
