--- a/it-IT/site/it-IT.mod_eventgallery_event.ini
+++ b/it-IT/site/it-IT.mod_eventgallery_event.ini
@@ -13,7 +13,7 @@ COM_MODULES_FIELD_MODULECLASS_LABEL="Classe modulo CSS"
 COM_MODULES_FIELD_MODULECLASS_DESC="Definisce classi css addizionali per il contenitore del modulo"
 
 MOD_EVENTGALLERY_OPTIONS_DEFAULT_MENU_ITEM_LABEL="Menu Item ID"
-MOD_EVENTGALLERY_OPTIONS_DEFAULT_MENU_ITEM_DESC="Definisce ID del menù dove saltare dalle anteprime. Manovra pericolosa con pericolo di pagine di errore. Se campo lasciato vuoto il componente determina quello corretto automaticamente."
+MOD_EVENTGALLERY_OPTIONS_DEFAULT_MENU_ITEM_DESC="Definisce ID del menÃ¹ dove saltare dalle anteprime. Manovra pericolosa con pericolo di pagine di errore. Se campo lasciato vuoto il componente determina quello corretto automaticamente."
 
 MOD_EVENTGALLERY_OPTIONS_COMMON_THUMBNAIL_LINK_MODE_LABEL="Modo Link"
 MOD_EVENTGALLERY_OPTIONS_COMMON_THUMBNAIL_LINK_MODE_DESCRIPTION="Definisce cosa accade se l&grave;utente preme uan anteprima. Non si applica petr tutti gli stili."
