--- a/it-IT/site/it-IT.mod_eventgallery_events.ini
+++ b/it-IT/site/it-IT.mod_eventgallery_events.ini
@@ -46,7 +46,7 @@ COM_MODULES_FIELD_MODULECLASS_LABEL="Module CSS class"
 COM_MODULES_FIELD_MODULECLASS_DESC="Defines additional css classes for the main module container"
 
 MOD_EVENTGALLERY_OPTIONS_DEFAULT_MENU_ITEM_LABEL="Menu Item ID"
-MOD_EVENTGALLERY_OPTIONS_DEFAULT_MENU_ITEM_DESC="Definisce un id menu a cui saltare premendo anteprima. Attenzione a dati errati pagine di errore. Lasciato vuoto il compomente far‡ tutto da solo"
+MOD_EVENTGALLERY_OPTIONS_DEFAULT_MENU_ITEM_DESC="Definisce un id menu a cui saltare premendo anteprima. Attenzione a dati errati pagine di errore. Lasciato vuoto il compomente far√† tutto da solo"
 
 MOD_EVENTGALLERY_OPTIONS_COMMON_THUMBNAIL_LINK_MODE_LABEL="Modo Link"
 MOD_EVENTGALLERY_MOD_EVENTGALLERY_OPTIONS_COMMON_THUMBNAIL_LINK_MODE_DESCRIPTION="Definisce cosa succede quando utente clicca su una delle anteprime. Non funziona in tutti i layouts."
