--- a/it-IT/site/it-IT.mod_eventgallery_latest.ini
+++ b/it-IT/site/it-IT.mod_eventgallery_latest.ini
@@ -5,7 +5,7 @@ MOD_EVENTGALLERY_OPTIONS_MAX_IMAGES_DESC="Quante immagini devo mostrare?"
 MOD_EVENTGALLERY_OPTIONS_THUMBWIDTH_LABEL="Larghezza miniatura"
 MOD_EVENTGALLERY_OPTIONS_THUMBWIDTH_DESC="La larghezza delle miniature"
 MOD_EVENTGALLERY_OPTIONS_EVENTHISTORYPOSITION_LABEL="Storico Posizione"
-MOD_EVENTGALLERY_OPTIONS_EVENTHISTORYPOSITION_DESC="0 per ultima, 1 per prima e via così. Usa questo parametro per creare tre moduli separati mostrando gli ultimi tre eventi."
+MOD_EVENTGALLERY_OPTIONS_EVENTHISTORYPOSITION_DESC="0 per ultima, 1 per prima e via cosÃ¬. Usa questo parametro per creare tre moduli separati mostrando gli ultimi tre eventi."
 
 
 COM_EVENTGALLERY_OPTIONS_EVENTS_SORT_EVENTS_BY_DESC="Definisce l&grave;ordine degli eventi."
