--- a/it-IT/site/it-IT.plg_eventgallery_pay_braintree.ini
+++ b/it-IT/site/it-IT.plg_eventgallery_pay_braintree.ini
@@ -14,6 +14,6 @@ COM_EVENTGALLERY_PLUGINS_PAYMENT_BRAINTREE_PRIVATE_KEY_DESC=""
 COM_EVENTGALLERY_PLUGINS_PAYMENT_BRAINTREE_PUBLIC_KEY_LABEL="Chiave pubblica"
 COM_EVENTGALLERY_PLUGINS_PAYMENT_BRAINTREE_PUBLIC_KEY_DESC=""
 
-COM_EVENTGALLERY_PLUGINS_PAYMENT_BRAINTREE_ERROR_TOKEN_GENERATION="Non mi connetto al server pagamenti. Prova più tardi"
+COM_EVENTGALLERY_PLUGINS_PAYMENT_BRAINTREE_ERROR_TOKEN_GENERATION="Non mi connetto al server pagamenti. Prova piÃ¹ tardi"
 COM_EVENTGALLERY_PLUGINS_PAYMENT_BRAINTREE_METHOD_PAYPAL="PayPal"
 COM_EVENTGALLERY_PLUGINS_PAYMENT_BRAINTREE_METHOD_CREDITCARD="Carta di credito"
