--- a/it-IT/site/it-IT.plg_eventgallery_pay_paypal.ini
+++ b/it-IT/site/it-IT.plg_eventgallery_pay_paypal.ini
@@ -14,4 +14,4 @@ COM_EVENTGALLERY_PLUGINS_PAYMENT_PAYPAL_CREDENTIALS_SIGNATURE_DESC="La firma del
 COM_EVENTGALLERY_PLUGINS_PAYMENT_PAYPAL_CREDENTIALS_APPID_LABEL="Credenziali - App ID"
 COM_EVENTGALLERY_PLUGINS_PAYMENT_PAYPAL_CREDENTIALS_APPID_DESC="Indicare app id per questo account paypal"
 COM_EVENTGALLERY_PLUGINS_PAYMENT_PAYPAL_PRODUCTIONMODE_LABEL="Modo Produzione"
-COM_EVENTGALLERY_PLUGINS_PAYMENT_PAYPAL_PRODUCTIONMODE_DESC="Indicare SI per mettere il pagamento in produzione. Diversamente user‡ la sandbox."
+COM_EVENTGALLERY_PLUGINS_PAYMENT_PAYPAL_PRODUCTIONMODE_DESC="Indicare SI per mettere il pagamento in produzione. Diversamente user√† la sandbox."
