--- a/it-IT/site/it-IT.plg_eventgallery_pay_przelewy24.ini
+++ b/it-IT/site/it-IT.plg_eventgallery_pay_przelewy24.ini
@@ -2,7 +2,7 @@ PLG_EVENTGALLERY_PAY_PRZELEWY24="Event Gallery - Pagaento - Przelewy24 Premium S
 PLG_EVENTGALLERY_PAY_PRZELEWY24_DESC="Offre il metodo di pagamento Przelewy24 Premium SMS alla cassa."
 
 COM_EVENTGALLERY_PLUGINS_PAYMENT_PREZELEWY24_LABEL="Przelewy24"
-COM_EVENTGALLERY_PLUGINS_PAYMENT_PREZELEWY24_DESC="Configurazione di Przelewy24. Questo metodo di pagamento Ë disponibile SOLO se il totale ordine combacia con uno degli SMS prezzo/mappa. Altrimenti non lo puoi selezionare."
+COM_EVENTGALLERY_PLUGINS_PAYMENT_PREZELEWY24_DESC="Configurazione di Przelewy24. Questo metodo di pagamento √® disponibile SOLO se il totale ordine combacia con uno degli SMS prezzo/mappa. Altrimenti non lo puoi selezionare."
 COM_EVENTGALLERY_PLUGINS_PAYMENT_PREZELEWY24_SELLERID_LABEL="ID Venditore"
 COM_EVENTGALLERY_PLUGINS_PAYMENT_PREZELEWY24_SELLERID_DESC="ID del venditore"
 COM_EVENTGALLERY_PLUGINS_PAYMENT_PREZELEWY24_PHONENUMBERMAPPINGS_LABEL="Prezzo/SMS numero equivalenza"
@@ -12,7 +12,7 @@ COM_EVENTGALLERY_PLUGINS_PAYMENT_PREZELEWY24_PRODUCTIONMODE_DESC="Se NO puoi tes
 
 COM_EVENTGALLERY_PLUGINS_PAYMENT_PREZELEWY24_VERIFICATION_SUCCESSFUL="Codice verificato correttamente"
 
-COM_EVENTGALLERY_PLUGINS_PAYMENT_PREZELEWY24_ERROR04="CODE inesistente o CODE gi‡ usato"
+COM_EVENTGALLERY_PLUGINS_PAYMENT_PREZELEWY24_ERROR04="CODE inesistente o CODE gi√† usato"
 COM_EVENTGALLERY_PLUGINS_PAYMENT_PREZELEWY24_ERROR101="richiesta errata (mancanza dati, importo errato)"
 COM_EVENTGALLERY_PLUGINS_PAYMENT_PREZELEWY24_ERROR102="CODE invalido (30 giorni rimasti)"
 COM_EVENTGALLERY_PLUGINS_PAYMENT_PREZELEWY24_ERROR103="CODE corretto, ma importo differente"
