--- a/it-IT/site/it-IT.plg_eventgallery_pay_standard.ini
+++ b/it-IT/site/it-IT.plg_eventgallery_pay_standard.ini
@@ -4,6 +4,6 @@ PLG_EVENTGALLERY_PAY_STANDARD_DESC="Offre il metodo di pagamento normale per la 
 COM_EVENTGALLERY_PLUGINS_PAYMENT_STANDARD_LABEL="Altri"
 COM_EVENTGALLERY_PLUGINS_PAYMENT_STANDARD_DESC="Opzioni di configurazione aggiuntive."
 COM_EVENTGALLERY_PLUGINS_PAYMENT_STANDARD_REVIEW_MESSAGE_LABEL="Rivedi Messaggio"
-COM_EVENTGALLERY_PLUGINS_PAYMENT_STANDARD_REVIEW_MESSAGE_DESC="Questo messaggio appare se il metodo di pagamento è selezionato."
+COM_EVENTGALLERY_PLUGINS_PAYMENT_STANDARD_REVIEW_MESSAGE_DESC="Questo messaggio appare se il metodo di pagamento Ã¨ selezionato."
 COM_EVENTGALLERY_PLUGINS_PAYMENT_STANDARD_CONFIRMATION_MESSAGE_LABEL="Messggio di conferma"
-COM_EVENTGALLERY_PLUGINS_PAYMENT_STANDARD_CONFIRMATION_MESSAGE_DESC="Questo messaggio appare nella pagina di conferma, email e pagina di tracciatura se il metodo di pagamento è selezionato."
+COM_EVENTGALLERY_PLUGINS_PAYMENT_STANDARD_CONFIRMATION_MESSAGE_DESC="Questo messaggio appare nella pagina di conferma, email e pagina di tracciatura se il metodo di pagamento Ã¨ selezionato."
