--- a/it-IT/site/it-IT.plg_osmap_com_eventgallery.ini
+++ b/it-IT/site/it-IT.plg_osmap_com_eventgallery.ini
@@ -23,12 +23,12 @@ OSMAP_OPTION_MONTHLY="Mensile"
 OSMAP_OPTION_YEARLY="Annuale"
 OSMAP_OPTION_HOURLY="Orario"
 
-OSMAP_EVENTGALLERY_CATEGORY_PRIORITY_LABEL="Priorit‡ Categorie"
-OSMAP_EVENTGALLERY_CATEGORY_PRIORITY_DESC="Imposta la priorit‡ per le categorie"
+OSMAP_EVENTGALLERY_CATEGORY_PRIORITY_LABEL="Priorit√† Categorie"
+OSMAP_EVENTGALLERY_CATEGORY_PRIORITY_DESC="Imposta la priorit√† per le categorie"
 OSMAP_EVENTGALLERY_CATEGORY_CHANGEFREQ_LABEL="Frequanza cambio categorie"
 OSMAP_EVENTGALLERY_CATEGORY_CHANGEFREQ_DESC="Imposta la frequenza di cambio per le categorie"
-OSMAP_EVENTGALLERY_LINK_PRIORITY_LABEL="Priorit‡ Link"
-OSMAP_EVENTGALLERY_LINK_PRIORITY_DESC="Imposta la priorit‡ per i links"
+OSMAP_EVENTGALLERY_LINK_PRIORITY_LABEL="Priorit√† Link"
+OSMAP_EVENTGALLERY_LINK_PRIORITY_DESC="Imposta la priorit√† per i links"
 OSMAP_EVENTGALLERY_LINK_CHANGEFREQ_LABEL="Frequenza cambio link"
 OSMAP_EVENTGALLERY_LINK_CHANGEFREQ_DESC="Imposta la frequenza di cambio per i links"
 
