--- a/it-IT/site/it-IT.plg_content_eventgallery_fields_category.ini
+++ b/it-IT/site/it-IT.plg_content_eventgallery_fields_category.ini
@@ -2,10 +2,10 @@ EVENTGALLERY_FIELDS_CATEGORY="Event Gallery - Campi Estensione Categorie"
 EVENTGALLERY_FIELDS_CATEGORY_DESC="Aggiunge alcuni campi utente alle categorie"
 
 COM_CATEGORIES_EVENTGALLERY_FIELDSET_LABEL="Event Gallery"
-COM_CATEGORIES_EVENTGALLERY_FIELDSET_DESC="Questo permette di editare alcuni campi. La descrizione puÚ contenere HTML. Al momento nessun editore, arrangiarsi con campo di testo."
+COM_CATEGORIES_EVENTGALLERY_FIELDSET_DESC="Questo permette di editare alcuni campi. La descrizione pu√≤ contenere HTML. Al momento nessun editore, arrangiarsi con campo di testo."
 
 
 PLG_EVENTGALLERY_FIELDS_CATEGORY_TITLE_LABEL="Titolo"
-PLG_EVENTGALLERY_FIELDS_CATEGORY_TITLE_DESC="Il titolo della categoria. Se vuoto verr‡ usato il titolo della categoria."
+PLG_EVENTGALLERY_FIELDS_CATEGORY_TITLE_DESC="Il titolo della categoria. Se vuoto verr√† usato il titolo della categoria."
 PLG_EVENTGALLERY_FIELDS_CATEGORY_DESCRIPTION_LABEL="Descrizione"
-PLG_EVENTGALLERY_FIELDS_CATEGORY_DESCRIPTION_DESC="Questo permette di editare alcuni campi. La descrizione puÚ contenere HTML. Al momento nessun editore, arrangiarsi con campo di testo. Se vuoto verr‡ usato il titolo della categoria."
+PLG_EVENTGALLERY_FIELDS_CATEGORY_DESCRIPTION_DESC="Questo permette di editare alcuni campi. La descrizione pu√≤ contenere HTML. Al momento nessun editore, arrangiarsi con campo di testo. Se vuoto verr√† usato il titolo della categoria."
