--- a/it-IT/site/it-IT.plg_eventgallery_ship_download.sys.ini
+++ b/it-IT/site/it-IT.plg_eventgallery_ship_download.sys.ini
@@ -3,4 +3,4 @@ PLG_EVENTGALLERY_SHIP_DOWNLOAD_DESC="Offre di scaricare l&grave;oggetto alla cas
 PLG_EVENTGALLERY_SHIP_DOWNLOAD_CREATE_ZIP_LABEL="Mostra ZIP Link"
 PLG_EVENTGALLERY_SHIP_DOWNLOAD_CREATE_ZIP_DESCRIPTION="Mostra un link in mail  / nella pagina per scaricare tutti i files in singolo file ZIP."
 PLG_EVENTGALLERY_SHIP_DOWNLOAD_SINGLEDOWNLOADLINKS_LABEL="Mostra link di scarico per i singoli files"
-PLG_EVENTGALLERY_SHIP_DOWNLOAD_SINGLEDOWNLOADLINKS_DESCRIPTION="Se attivo, un link di scarico per ogni singolo file verr‡ fornito."
+PLG_EVENTGALLERY_SHIP_DOWNLOAD_SINGLEDOWNLOADLINKS_DESCRIPTION="Se attivo, un link di scarico per ogni singolo file verr√† fornito."
