--- a/it-IT/site/it-IT.plg_eventgallery_sur_standard.ini
+++ b/it-IT/site/it-IT.plg_eventgallery_sur_standard.ini
@@ -10,6 +10,6 @@ COM_EVENTGALLERY_PLUGINS_SURCHARGE_STANDARD_MAX_LABEL="Massimo"
 COM_EVENTGALLERY_PLUGINS_SURCHARGE_STANDARD_MAX_DESC="Importo massimo prima che sia inattiva. 0 significa nessun massimo."
 
 COM_EVENTGALLERY_PLUGINS_SURCHARGE_STANDARD_TYPE_LABEL="Tipo"
-COM_EVENTGALLERY_PLUGINS_SURCHARGE_STANDARD_TYPE_DESC="Definisce che valore usare per la comparazione del valore. Numero Articoli Ë la somma di tutti gli articoli moltiplicati con la quantit‡. Moneta Ë il totale parziale del carrello."
+COM_EVENTGALLERY_PLUGINS_SURCHARGE_STANDARD_TYPE_DESC="Definisce che valore usare per la comparazione del valore. Numero Articoli √® la somma di tutti gli articoli moltiplicati con la quantit√†. Moneta √® il totale parziale del carrello."
 COM_EVENTGALLERY_PLUGINS_SURCHARGE_STANDARD_TYPE_MONEY="Moneta"
 COM_EVENTGALLERY_PLUGINS_SURCHARGE_STANDARD_TYPE_ITEMCOUNT="Numero Articoli"
